# OOPCPP

./: .gitignore  .gitmodules  README.md
task-0/: this file was created because…
task-1/: BigInt.cpp  BigInt.h  CMakeLists.txt  a.out  bigint.info  main.cpp
task-1/cmake/: doctest.cmake
task-1/include/bigint/: header.hpp
task-1/maintest/: CMakeLists.txt  main.cpp
task-1/src/: BigInt.cpp  BigInt.h  main.cpp
task-1/src/bigint/: source.cpp
task-1/test/: CMakeLists.txt  test_bigint.cpp  test_main.cpp
task-1/test/bigint/: test.cpp
task-1_old/: CMakeLists.txt
task-1_old/include/bigint/: header.hpp
task-1_old/src/bigint/: source.cpp
task-1_old/test/: test_bigint.cpp
task-2/: CMakeLists.txt  Makefile  input.txt  main.cpp  output.txt
task-2/sources/game_sources/input/: Blinkership.txt  Blocker.txt  DifferentRules.txt  Enretard.txt  Gggwfishhook.txt  Glider.txt  Gosperglidergun.txt  Piorbital.txt
task-2/sources/game_sources/output/: asdf.txt
task-2/sources/include/: Cell.hpp  CmdArgs.hpp  Controllers.hpp  OnlineController.hpp  Universe.hpp  UniverseParser.hpp  Utils.hpp
task-2/sources/src/: Cell.cpp  CmdArgs.cpp  Controllers.cpp  OnlineController.cpp  Universe.cpp  UniverseParser.cpp  Utils.cpp
task-2/test/: CMakeLists.txt  test.cpp  test_main.cpp
